domain-2-cluster-hardening/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
     ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: example.internal
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example-svc
            port:
              number: 80
